--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
+
+    //Yandex MapKit
+    implementation 'com.yandex.android:maps.mobile:4.2.2-full'
+
+    implementation "com.google.android.gms:play-services-location:17.0.0"
 }
