--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,13 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-compiler:2.42'
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
+
+    //Yandex MapKit
+    implementation 'com.yandex.android:maps.mobile:4.2.2-full'
+
+    //ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.1.0-beta01"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
