--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,9 @@ dependencies {
     //Yandex MapKit
     implementation 'com.yandex.android:maps.mobile:4.2.2-full'
 
-    implementation "com.google.android.gms:play-services-location:17.0.0"
+    //ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.1.0-beta01"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
